--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "lucide-react": "^0.479.0",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.0",
     "next": "15.0.0",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
