creates user, vote, tag, tag-question, question, interaction, collection, answer and account model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,5 +32,5 @@
     "**/public": true,
     "**/next-env.d.ts": true
   },
-  "cSpell.words": ["mdxeditor", "upvotes"]
+  "cSpell.words": ["downvotes", "mdxeditor", "upvotes"]
 }
